force-app/main/default/objects/Apttus_Config2__BillingPlanTemplateItem__c/Apttus_Config2__BillingPlanTemplateItem__c.object-meta.xml
<CustomObject>
    <description>Represents an entry in a billing plan template</description>
    <label>Billing Plan Template Item</label>
    <nameField>
        <displayFormat>TI-{00000000}</displayFormat>
        <label>Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Plan Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>