force-app/main/default/objects/Apttus_Config2__BillingPlanTemplateItem__c/fields/Apttus_Config2__BillingPlanTemplateId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillingPlanTemplateId__c</fullName>
    <description>ID of the associated billing plan template</description>
    <inlineHelpText>ID of the associated billing plan template</inlineHelpText>
    <label>Billing Plan Template</label>
    <referenceTo>Apttus_Config2__BillingPlanTemplate__c</referenceTo>
    <relationshipLabel>Billing Plan Template Items</relationshipLabel>
    <relationshipName>Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>