force-app/main/default/objects/Apttus_Config2__BillingPlanTemplateItem__c/fields/Apttus_Config2__PaymentTermId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PaymentTermId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the payment term associated with the template plan item</description>
    <inlineHelpText>ID of the payment term associated with the template plan item</inlineHelpText>
    <label>Payment Term</label>
    <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
    <relationshipLabel>Billing Plan Template Items</relationshipLabel>
    <relationshipName>BillingPlanTemplateItems</relationshipName>
    <type>Lookup</type>
</CustomField>