force-app/main/default/objects/Apttus_Config2__BillingPlanTemplateItem__c/fields/Apttus_Config2__PlanItemName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__PlanItemName__c</fullName>
    <description>The template plan item name</description>
    <inlineHelpText>The template plan item name</inlineHelpText>
    <label>Plan Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>